--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-# --- Default: Erstmal alles ignorieren (außer Verzeichnisse + Git)
+# --- Default: Erstmal alles ignorieren (außer Verzeichnisse + Git(hub) + Lizenz)
 *
 !*/
 !/.gitignore
 !/.gitattributes
+!/.github/**
+!/LICENSE
+!/NOTICE
 
 # --- Markdown / Text
 !**/*.md
